[dev]: Email not verified page created. 1) If the email is not verified the user will be redirected to this page.

--- a/src/App.css
+++ b/src/App.css
@@ -169,6 +169,10 @@ fieldset {
   background-color: #3e8e41;
 }
 
+.btn-group .full-width{
+  width: 100%;
+}
+
 .btn-group-button-active {
   background-color: #3e8e41 !important;
 }
