--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@ body {
   font-size: 12px;
   line-height: 30px;
   color: #777;
-  background: #4CAF50;
 }
 
 .container {
@@ -200,7 +199,91 @@ fieldset {
   animation: animate 1.5s infinite linear;
 }
 
+.topnav {
+  overflow: hidden;
+  background-color: #ffffff;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #3e8e41;
+  color: white;
+}
+
+
+@media screen and (max-width: 600px) {
+  .topnav .search-container {
+    float: none;
+  }
+  .topnav a{
+    display: block;
+    text-align: left;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
+  }
+}
+
 @keyframes animate{
   0%{transform: rotate(0deg);}
   100%{transform: rotate(360deg);}
 };
+
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown a {
+  float: none;
+  color: white;
+  background-color: #04AA6D;
+}
+
+.dropdown a:hover {
+  background-color: #3e8e41;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  background-color: #ddd;
+}
+
+.dropdown-content a:hover {
+  background-color: #b0b0b0;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
