--- a/src/App.css
+++ b/src/App.css
@@ -188,14 +188,14 @@ fieldset {
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  box-shadow: 48px 0 0 0 rgba(200,0,0,.3),
-      36px 36px 0 0 rgba(200,0,0,.3),
-      0px 48px 0 0 rgba(200,0,0,.3),
-      -36px 36px 0 0 rgba(200,0,0,.3),
-      -48px 0 0 0 rgba(200,0,0,.3),
-      -36px -36px 0 0 rgba(200,0,0,.3),
-      0px -48px 0 0 rgba(200,0,0,.3),
-      36px -36px 0 0 rgba(200,0,0,.3);
+  box-shadow: 48px 0 0 0 yellow,
+      36px 36px 0 0 green,
+      0px 48px 0 0 blue,
+      -36px 36px 0 0 violet,
+      -48px 0 0 0 red,
+      -36px -36px 0 0 orange,
+      0px -48px 0 0 cyan,
+      36px -36px 0 0 olive;
   animation: animate 1.5s infinite linear;
 }
 
