[dev]: Form validation added. 1) If the field have any validations it applies when the field is focused out.

--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,13 @@ fieldset {
   color: #888;
 }
 
+.form-validation-error{
+  outline: 3px solid red;
+}
+.form-validation-error-text{
+  color: red;
+}
+
 /* Style the tab */
 .tab {
   overflow: hidden;
