--- a/src/App.css
+++ b/src/App.css
@@ -294,3 +294,67 @@ fieldset {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+/* The snackbar - position it at the bottom and in the middle of the screen */
+.snackbar {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  min-width: 250px; /* Set a default minimum width */
+  margin-left: -125px; /* Divide value of min-width by 2 */
+  background-color: #333; /* Black background color */
+  color: #fff; /* White text color */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  left: 50%; /* Center the snackbar from left */
+  right: 50%; /* Center the snack bar from right */
+  word-break: break-all;
+  bottom: 30px; /* 30px from the bottom */
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3), 0 15px 15px 0 rgba(0, 0, 0, 0.3); /* Shadow added */
+}
+
+/* Show the snackbar when clicking on a button (class added with JavaScript) */
+.snackbar.show {
+  visibility: visible; /* Show the snackbar */
+  -webkit-animation: snack-fadein 0.5s, snack-fadeout 0.5s 3.6s;
+  animation: snack-fadein 0.5s, snack-fadeout 0.5s 3.6s;
+  color: white;
+}
+
+/* Background color for info popup */
+.snackbar.info {
+  background-color: #17a2b8!important;
+}
+/* Background color for success popup */
+.snackbar.success {
+  background-color: #28a745!important;
+}
+/* Background color for warning popup */
+.snackbar.warning {
+  background-color: #ffc107!important;
+}
+/* Background color for error popup */
+.snackbar.error {
+  background-color: #dc3545!important;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes snack-fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes snack-fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes snack-fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes snack-fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
